[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-fixture-tools"
version = "1.2.0"
description = "Plugin for pytest which provides tools for fixtures"
maintainers = [{ name = "Ondrej Gajdusek", email = "ondrej@gajdusek.dev" }]
authors = [
  { name = "Paylogic International", email = "developers@paylogic.com" },
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "Framework :: Pytest",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8.0"
entry-points.pytest11.pytest-fixture-tools = "pytest_fixture_tools.plugin"

dependencies = ["pytest", "pydot", "py"]
optional-dependencies.test = ["detox"]

[tool.setuptools]
py-modules = ["pytest_fixture_tools"]

[project.urls]
"Source Code" = "https://github.com/pytest-dev/pytest-fixture-tools"
"Bug Reports" = "https://github.com/pytest-dev/pytest-fixture-tools/issues"
